...
      </View>
    );
  };

  if (draggable) {
    return (
      <View style={styles.wrapper} testID="directory-list">
        <DraggableFlatList
          data={reorderItems}
          keyExtractor={(item) => item.relativePath}
          renderItem={renderDraggableItem}
          ListHeaderComponent={listHeader}
          ListEmptyComponent={
...
